...
        // --- INPUT FIELDS ---
        TextField(
            value = english,
            onValueChange = { english = it },
            label = { Text(stringResource(R.string.English_Label)) },
            placeholder = { Text("Enter text") },
            modifier = Modifier.semantics{contentDescription= "English Input"}.fillMaxWidth()
        )
        TextField(
            value = vietnamese,
            onValueChange = { vietnamese = it },
            label = { Text(stringResource(R.string.Vietnamese_Label)) },
            placeholder = { Text("Nhập nội dung") },
...
                            // Error Handling: Generic
                            changeMessage("Unexpected Error")
                        }
                    }
                },
                enabled = true,
                modifier = Modifier.semantics { contentDescription = "Save" }
            )
            { Text("Save") }
        }
        // --- HISTORY DISPLAY ---
        // Shows a list of words added in the current session
        Column {
...
